--- a/web/build.gradle
+++ b/web/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile "org.springframework.security:spring-security-web:${spring_security_version}"
     compile "org.springframework.security:spring-security-config:${spring_security_version}"
     compile "org.springframework.security:spring-security-taglibs:${spring_security_version}"
+    compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.2.RELEASE'
+
 
     compile "com.fasterxml.jackson.core:jackson-core:${jackson_version}"
     compile "com.fasterxml.jackson.core:jackson-databind:${jackson_version}"
