--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        jcenter()
         mavenCentral()
     }
 
@@ -20,11 +21,32 @@ plugins {
 }
 apply plugin: 'org.liquibase.gradle'
 
+apply plugin: 'java'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+compileJava.options.encoding = 'UTF-8'
+// build jars with sources
+jar {
+    from sourceSets.main.allSource
+}
+
+apply plugin: 'findbugs'
+findbugsMain {
+    ignoreFailures = true
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+findbugs {
+    sourceSets = [sourceSets.main]
+}
+
 subprojects {
     apply plugin: "net.ltgt.errorprone"
 
     tasks.withType(JavaCompile) {
-        options.compilerArgs += [ '-Xep:MissingCasesInEnumSwitch:ERROR' ]
+        options.compilerArgs += ['-Xep:MissingCasesInEnumSwitch:ERROR']
     }
     configurations.errorprone {
         resolutionStrategy.force 'com.google.errorprone:error_prone_core:2.1.3'
@@ -34,6 +56,15 @@ subprojects {
     idea {
         module {
             name = "$project.parent.name $name"
+        }
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        jcenter()
+        maven {
+            url 'http://repository.jboss.org/nexus/content/groups/public'
         }
     }
 }
